		* Changed m4/readline.m4 so that readline libs are only used
		  when needed, i.e., no longer append readline libs to LIBS,
		  use READLINE_LIBS instead.
		* Fixed crash in aMule when amuleweb tried to get transfers
		  tab and aMule had never connected to a server before.
		* New backtrace output with demangled function names, file
		  names and line numbers, when possible.

	GonoszTopi:
		* Initial work on EC protocol version 2.0.


--------------------------------------------------------------------------------

Version 2.0.0rc7 - The "99,6% Final" version.
----------
2004-10-19

	bisley:
		* Added session ratio and total ratio to XAS

	deltaHF:
	        * Got back from hell and changed one icon on the GUI ;)

	Jacobo221:
		aMule GUI:
		* Fixed two almost-the-same bugs when clicked download button 
		  and no items where selected (as reported by powtrix/willy,
		  thanks).

		aMuleWeb:
		* Fixed a bug where up/down limits woudln't be displayed 
		  correctly if their string length were different.

		aMuleCMD:
		* Added 'list' (or 'find') command to search for a file in
		  the downloads queue by name or by number (or just show all).
		* Added the ability to resume/pause all downloads at the same 
		  time through amulecmd (very handy when all downloads have
		  been paused due to lack of space).
		* Fixed two bugs on amulecmd by which using 'pause' or 'resume'
		  without arguments would pause/resume the oldest download.
		* Fixed a bug so that help command no longer is send to core.
		* Fixed other commands sending blank data to core.
		* Cleaned unneeded output log messages + added sent command
		  messages to log (for easier security monitoring).
		* Several command simplifications on amulecmd to make it easier
		  to use (while maintaining backwards compatibility).
		* Lots of translations lacks

	KingFish:
		* Fixed broken compilation in SysTray.cpp with gcc 3.3.4.

	Kry:
		* Fixed: 	Crashes related to animation deletion on http download dialog