@@ -33,6 +33,7 @@ Version 2.0.0rc8 - The "???????????" version.
 		  tab and aMule had never connected to a server before.
 		* New backtrace output with demangled function names, file
 		  names and line numbers, when possible.
+		* Initial (not functional yet) SOCKS5 proxy support.
 
 	GonoszTopi:
 		* Initial work on EC protocol version 2.0.
